--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <main>
-      <h1>Change</h1>
+      <h1>TimeForChange</h1>
+      <p>Hello</p>
     </main>
   </body>
 </html>
